Changes since version 1.5.1
---------------------------

- Fixed a bug with AMD exception handling, where it was possible that
  certain exceptions propagate out of ice_response() or
  ice_exception(), and therefore such exceptions were not handled
  properly.

- Exceptions raised while marshaling data for batch requests resulted
  in a connection deadlock. This has been fixed.

- Fixed a bug in slice2cs: the generated code was incorrect
  for dictionaries with sequence value types, if that sequence
  value type was mapped to an array.

- Fixed bug in IcePack that would prevent dynamically added adapters
  to be used again after the IcePack registry was restarted.

- Fixed tracing of operation mode.

- Fixed bug in slice2cpp: for statically linked binaries under
  Windows, exceptions and classes could cause an
  UnmarshalOutOfBoundsException.

- Fixed bug in slice2java: with the --impl-tie option, incorrect code
  was generated for local interfaces and classes.

- Tightened semantic check for all Slice compilers: previously, a
  local interface or class could be derived from a non-local interface
  or class. This is now correctly diagnosed as an error.

- Changed code generation in slice2java: for local interfaces, only an
  OperationsNC (but no Operations) interface is generated
  now. (Previously, both interfaces were generated, with one of them
  being empty.)

- The IceSSL plug-in was using regular mutexes in some places where
  static mutexes are necessary. This has been fixed.

- Fixed a bug in the garbage collector that caused a crash in rare
  circumstances.

- Freeze dictionaries now support indices. You can index on the full
  value of the dictionary, or on a member (when the value is a struct
  or a class). When you index on a member, you can define several
  indices (for different members).  See the Freeze bench demo and the
  Freeze dbmap test for examples.

- The Ice::Service class no longer resets the umask to 0, but rather