@@ -1,6 +1,8 @@
 Changes since version 1.5.1
 ---------------------------
 
+- Changed Ice::Service to use _exit() in the daemon parent.
+
 - Fixed a bug with AMD exception handling, where it was possible that
   certain exceptions propagate out of ice_response() or
   ice_exception(), and therefore such exceptions were not handled
